daemon.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-ds
  labels:
    app: my-app
spec: 
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: mysql
        ports:
          - name: http
            protocol: TCP
            containerPort: 80
  selector:
    matchLabels:
      app: my-app
