hpa.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: xyz-app
spec:
  template:
    metadata:
      labels:
        app: xyz-app
    spec:
      containers:
        - name: xyz-app
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: 400m
              memory: 2Gi
  replicas: 1
  selector:
    matchLabels:
      app: xyz-app
  strategy:
    type: RollingUpdate
