pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  volumes:
  - name: vol
    hostPath:
      path: /mnt
  containers:
  - name: my-container
    image: nginx
    volumeMounts:
    - name: vol
      mountPath: /var/www/html
