ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-ingress
  labels:
    app: e-commerce
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: home-app-service
      port:
        number: 80
  rules:
    - host: cbz.com
      http:
        paths:
        - path: /mobile
          pathType: Prefix
          backend:
            service:
              name: mobile-app-service
              port:
                number: 80
        - path: /cloth
          pathType: Prefix
          backend:
            service:
              name: cloth-app-service
              port:
                number: 80
